--- a/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
+++ b/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
@@ -184,13 +184,13 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{XXX\inst{1} \and XXX\inst{1} \and Joachim Wackerow\inst{1}}
+\author{Benjamin Zapilko\inst{1} \and Thomas Bosch\inst{1} \and Joachim Wackerow\inst{1}}
 %
 \authorrunning{XXXXX} % abbreviated author list (for running head)
 %
 %%%% list of authors for the TOC (use if author list has to be modified)
 \institute{GESIS – Leibniz Institute for the Social Sciences, Germany\\
-\email{\{thomas.bosch,benjamin.zapilko,joachim.wackerow\}}@gesis.org}
+\email{firstname.lastname}@gesis.org}
 
 \maketitle              % typeset the title of the contribution
 
